# LV-Discer

./: .gitignore  .prettierignore  Cargo.toml  Cargo.toml.bak  README.md  TODO.md  build-config.cjs  build-release.sh  build.rs  build.sh  index.js  package.json  rover-build.sh  schema.json  token.json  tokencache.json  tsconfig.json  upgrades.js
graphql_queries/: queries.graphql
js_src/: actions.ts  build-config.cts  config.ts  feedbacks.ts  index.ts  send.ts  upgrades.ts
module/: build-config.cjs  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
module/companion/: manifest.json
module/js_src/: actions.ts  config.ts  util.ts
module/src/: actions.ts  config.ts  coordinator_communication.ts  feedbacks.ts  index.ts  upgrades.ts  util.ts  websocket_manager.ts  worker.ts
rust-controller/: Cargo.toml
rust-controller/src/: get_data.rs  hole.rs  lib.rs  setup_helpers.rs
rust-controller/wasm-macros/: Cargo.toml
rust-controller/wasm-macros/src/: lib.rs
rust_controller/: Cargo.toml  Rocket.toml  build.rs
rust_controller/.cargo/: config.toml
rust_controller/graphql_queries/: queries.graphql
rust_controller/schemas/: tjing.graphql
rust_controller/src/: get_data.rs  hole.rs  lib.rs  main.rs  queries.rs  setup_helpers.rs  util.rs
rust_controller/src/api/: coordinator_wrapper.rs  guard.rs  mod.rs  mutation.rs  query.rs  update_loop.rs  vmix_calls.rs  webpage_responses.rs
rust_controller/src/api/websocket/: channels.rs  htmx.rs  mod.rs
rust_controller/src/controller/: coordinator.rs  get_data.rs  hole.rs  mod.rs  queries.rs  setup_helpers.rs
rust_controller/src/controller/coordinator/: leaderboard_cycle.rs  mod.rs  player.rs  player_queue_system.rs  simple_queries.rs  vmix_calls.rs
rust_controller/src/dto/: coordinator_builder.rs  group.rs  mod.rs  player.rs  rounds.rs
rust_controller/src/flipup_vmix_controls/: internal_content.rs  leaderboard.rs  mod.rs  score.rs
rust_controller/src/vmix/: conversions.rs  functions.rs  mod.rs  stream_handler.rs
rust_controller/static/: styles.css
rust_controller/templates/: current_selected.hbs  divisions.hbs  index.hbs  new_coordinator.hbs  rounds.hbs
rust_controller/wasm_macros/: Cargo.toml
rust_controller/wasm_macros/src/: lib.rs
schemas/: tjing.graphql
scripts/: build-release.sh  build.sh  rover-build-release.sh  rover-build.nu  rover-build.sh  test.sh
src/: credentials.json  get_data.rs  lib.rs  main.rs  queries.graphql  queries.rs  schema.graphql  schema.json  test_module.js  vmix.rs  vmix_controller.rs
