[package]
name = "tjing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cynic = { version = "2.2.8", features = ["http-surf"] }
surf = "2.3.2"
syn = "2.0.13"
log = "0.4.17"
serde = "1.0.159"
serde_json = "1.0.95"
clap = "4.2.1"
anyhow = "1.0.70"
hyper = "0.14.25"
hyper-rustls = "0.24.0"
yup-oauth2 = "8.1.1"
paste = "1.0.12"
quote = "1.0.26"
egui = "0.21.0"
eframe = "0.21.3"
catppuccin-egui = "2.0.1"
reqwest = { version = "0.11.16", features = ["blocking"]}
async-std = "1.12.0"

[dependencies.tokio]
version = "*"
features = ["full"]

[dev-dependencies]
insta = "1"
