[package]
name = "rust-wasm-test-edvin"
version = "0.1.0"
authors = ["Edvin Bryntesson <epost@edvinbryntesson.se>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cynic = { version = "2.2.8", features = ["http-surf"] }
syn = "2.0.13"
log = "0.4.17"
serde = "1.0.159"
serde_json = "1.0.95"
clap = "4.2.1"
anyhow = "1.0.70"
paste = "1.0.12"
quote = "1.0.26"
catppuccin-egui = "2.0.1"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
console_error_panic_hook = { version = "0.1.6", optional = true }
getrandom = { version = "0.2.9", features = ["js"] }
reqwest = { version = "0.11.6", features = ["json", "blocking"] }
js-sys = "0.3.61"
[dev-dependencies]
insta = "1"
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies.web-sys]
version = "0.3"
features = [
    "Request",
    "RequestInit",
    "Response",
    "Window",
]
