[package]
name = "rust-wasm-test-edvin"
version = "0.1.0"
authors = ["Edvin Bryntesson <epost@edvinbryntesson.se>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cynic = { version = "2.2.8", features = ["http-surf"] }
syn = "2.0.15"
log = "0.4.17"
serde = "1.0.159"
serde_json = "1.0.96"
clap = "4.2.1"
anyhow = "1.0.70"
paste = "1.0.12"
quote = "1.0.26"
catppuccin-egui = "2.0.1"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
wasm-rs-async-executor = "0.9.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
getrandom = { version = "0.2.9", features = ["js"] }
reqwest = { version = "0.11.16", features = ["json", "blocking"] }
js-sys = "0.3.61"
regex = "1.7.3"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen-test = "0.3.34"
[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
