[package]
name = "flipup-sm-coordinator"
version = "0.1.0"
authors = ["Edvin Bryntesson <epost@edvinbryntesson.se>"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cynic = { version = "3.7.2" }
syn = "2.0.66"
log = "0.4.21"
serde = "1.0.203"
serde_json = "1.0.117"
clap = "4.5.4"
anyhow = "1.0.86"
paste = "1.0.15"
quote = "1.0.36"
getrandom = { version = "0.2.15" }
reqwest = { version = "0.12.4", features = ["json"] }
regex = "1.10.4"
cynic-codegen = "3.7.2"
rand = "0.9.0-alpha.1"
itertools = "0.13.0"
rocket = "0.5.0"
rocket_okapi = { version = "0.8.0", features = ["swagger", "rapidoc"] }
tokio = "1.38.0"
rayon = "1.10.0"
chrono = "0.4.38"
chrono-tz = "0.9.0"
#wasm-futures-executor = "0.2.0"



[build-dependencies]
cynic-codegen = "3.7.2"
