[package]
name = "flipup-sm-coordinator"
version = "0.1.0"
authors = ["Edvin Bryntesson <epost@edvinbryntesson.se>"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cynic = { version = "3.7.3" }
syn = "2.0.66"
log = "0.4.21"
serde = "1.0.203"
serde_json = "1.0.117"
clap = "4.5.4"
anyhow = "1.0.86"
paste = "1.0.15"
quote = "1.0.36"
getrandom = { version = "0.2.15" }
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
regex = "1.10.4"
cynic-codegen = "3.7.3"
rand = "0.9.0-alpha.1"
itertools = "0.13.0"
rocket = "0.5.1"
rocket_okapi = {git = "https://github.com/Bryntet/okapi", features = ["swagger", "rapidoc", "rocket_dyn_templates", "rocket_ws"] }
tokio = {version =  "1.38.0", features = ["full"] }
rayon = "1.10.0"
chrono = { version = "0.4.38",features = ["serde",] }
chrono-tz = "0.9.0"
rocket_ws = "0.1.1"
thiserror = "1.0.61"


[dev-dependencies]
fake = {version = "2.9.2", features = ["derive", "uuid", "always-true-rng"]}

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["handlebars"]

[build-dependencies]
cynic-codegen = "3.7.3"
